// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with 0 as index -- show latest tag 1`] = `
<div>
  <li
    class="FileVersionList--Element"
  >
    <section
      class="grid-container mx-auto grid-container--collapsed-rows p-4"
    >
      <div
        class="FileVersionElement--Icon row-3 cell-1 lg:row-1 lg:cell-1"
      />
      <div
        class="FileVersionElement--Tag row-3 cell-2 lg:row-2 lg:cell-1"
      >
        Latest
      </div>
      <div
        class="flex row-1 cell-12 lg:cell-7"
      >
        <button
          class="FileVersionElement--button"
        >
          VersionFileName.js
        </button>
        <p
          class="FileVersionList--text italic FileVersionList--hidden pt-4 ml-16"
        >
          FV_TT8NF09R
        </p>
        <button
          class="ui icon left labeled button FileVersionElement--button FileVersionList--hidden ml-4"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          FV_TT8NF09R
        </button>
      </div>
      <div
        class="flex row-3 cell-9 lg:row-1 lg:cell-4 lg:justify-end"
      >
        <div
          class="Avatar inline-block mr-8"
          style="height: 20px; width: 20px;"
        >
          <img
            alt="xuzhu avatar"
            class="Avatar-img"
            src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
          />
        </div>
        <time
          class="FileVersionList--text"
          datetime="2018-08-21T03:16:11.000Z"
          title="2018-08-21T03:16:11+00:00"
        >
          8 months ago
        </time>
        <p
          class="FileVersionList--text row-1 cell-2"
        >
          9.9 kB
        </p>
        <button
          class="FileVersionList--text row-1 cell-1"
        >
          <svg
            height="12"
            id="mock-icon"
            kind="download"
            width="12"
          >
            <title>
              icon-
              download
            </title>
          </svg>
        </button>
      </div>
      <p
        class="FileVersionList--text row-2 cell-12 lg:cell-2-11"
      >
        version description
      </p>
    </section>
  </li>
</div>
`;

exports[`renders correctly with 1 as index -- show version kfId 1`] = `
<div>
  <li
    class="FileVersionList--Element"
  >
    <section
      class="grid-container mx-auto grid-container--collapsed-rows p-4"
    >
      <div
        class="FileVersionElement--Icon row-3 cell-1 lg:row-1 lg:cell-1"
      />
      <div
        class="flex row-1 cell-12 lg:cell-7"
      >
        <button
          class="FileVersionElement--button"
        >
          VersionFileName.js
        </button>
        <p
          class="FileVersionList--text italic FileVersionList--hidden pt-4 ml-16"
        >
          FV_TT8NF09R
        </p>
        <button
          class="ui icon left labeled button FileVersionElement--button FileVersionList--hidden ml-4"
        >
          <i
            aria-hidden="true"
            class="copy icon"
          />
          FV_TT8NF09R
        </button>
      </div>
      <div
        class="flex row-3 cell-9 lg:row-1 lg:cell-4 lg:justify-end"
      >
        <div
          class="Avatar inline-block mr-8"
          style="height: 20px; width: 20px;"
        >
          <img
            alt="xuzhu avatar"
            class="Avatar-img"
            src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
          />
        </div>
        <time
          class="FileVersionList--text"
          datetime="2018-08-21T03:16:11.000Z"
          title="2018-08-21T03:16:11+00:00"
        >
          8 months ago
        </time>
        <p
          class="FileVersionList--text row-1 cell-2"
        >
          9.9 kB
        </p>
        <button
          class="FileVersionList--text row-1 cell-1"
        >
          <svg
            height="12"
            id="mock-icon"
            kind="download"
            width="12"
          >
            <title>
              icon-
              download
            </title>
          </svg>
        </button>
      </div>
      <p
        class="FileVersionList--text row-2 cell-12 lg:cell-2-11"
      >
        version description
      </p>
    </section>
  </li>
</div>
`;
